@@ -1,3 +1,4 @@
+- Tone down `FundsMover` payment cleanup.
 - Batch up RPC socket response parsing.
 
 0.5C
